move recipes into meta-tgp-core

--- a/meta-tgp-core/conf/layer.conf
+++ b/meta-tgp-core/conf/layer.conf
@@ -5,9 +5,9 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "meta-tgp"
-BBFILE_PATTERN_meta-tgp = "^${LAYERDIR}/"
-BBFILE_PRIORITY_meta-tgp = "6"
+BBFILE_COLLECTIONS += "tgp-core"
+BBFILE_PATTERN_tgp-core = "^${LAYERDIR}/"
+BBFILE_PRIORITY_tgp-core = "6"
 
-LAYERDEPENDS_meta-tgp = "core"
-LAYERSERIES_COMPAT_meta-tgp = "mickledore"
+LAYERDEPENDS_tgp-core = "core"
+LAYERSERIES_COMPAT_tgp-core = "mickledore"
