--- a/meta-tgp-core/conf/layer.conf
+++ b/meta-tgp-core/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_tgp-core = "^${LAYERDIR}/"
 BBFILE_PRIORITY_tgp-core = "6"
 
 LAYERDEPENDS_tgp-core = "core"
-LAYERSERIES_COMPAT_tgp-core = "mickledore"
+LAYERSERIES_COMPAT_tgp-core = "kirkstone mickledore"
