add thud compatibility tag

--- a/meta-tgp-extras/conf/layer.conf
+++ b/meta-tgp-extras/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_tgp-extras = "^${LAYERDIR}/"
 BBFILE_PRIORITY_tgp-extras = "6"
 
 LAYERDEPENDS_tgp-extras = "core"
-LAYERSERIES_COMPAT_tgp-extras = "kirkstone mickledore"
+LAYERSERIES_COMPAT_tgp-extras = "thud kirkstone mickledore"
