Add Scarthgap compatibility

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_tgp = "^${LAYERDIR}/"
 BBFILE_PRIORITY_tgp = "6"
 
 LAYERDEPENDS_tgp = "core"
-LAYERSERIES_COMPAT_tgp = "thud kirkstone mickledore"
+LAYERSERIES_COMPAT_tgp = "thud kirkstone mickledore scarthgap"
